kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: default
spec:
  # strategy:
  #   type: RollingUpdate
  # replicas: 3
  selector:
    matchLabels:
      app: app-of-apps
  template:
    metadata:
      name: apps
      labels:
        app: app-of-apps
    spec:
      nodeSelector:
        role: workers
